# NateMaths

./: CMakeLists.txt  README.md
include/: basics.hpp  vectors.hpp
